--- a/angular.json
+++ b/angular.json
@@ -175,23 +175,23 @@
         }
       }
     },
-    "design-system": {
+    "design-system-royer-adames-com": {
       "projectType": "library",
-      "root": "projects/design-system",
-      "sourceRoot": "projects/design-system/src",
+      "root": "projects/design-system-royer-adames-com",
+      "sourceRoot": "projects/design-system-royer-adames-com/src",
       "prefix": "my-prefix",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:ng-packagr",
           "options": {
-            "project": "projects/design-system/ng-package.json"
+            "project": "projects/design-system-royer-adames-com/ng-package.json"
           },
           "configurations": {
             "production": {
-              "tsConfig": "projects/design-system/tsconfig.lib.prod.json"
+              "tsConfig": "projects/design-system-royer-adames-com/tsconfig.lib.prod.json"
             },
             "development": {
-              "tsConfig": "projects/design-system/tsconfig.lib.json"
+              "tsConfig": "projects/design-system-royer-adames-com/tsconfig.lib.json"
             }
           },
           "defaultConfiguration": "production"
@@ -199,7 +199,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "projects/design-system/tsconfig.spec.json",
+            "tsConfig": "projects/design-system-royer-adames-com/tsconfig.spec.json",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
