--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build design-system-royer-adames-com",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "e2e": "ng e2e",
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
     "autoprefixer": "^10.4.16",
+    "design-system-royer-adames-com": "^0.0.2",
     "postcss": "^8.4.32",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.0",
